axion/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: axion-ui
spec:
  type: ClusterIP
  selector:
    app: axion-ui
  ports:
  - port: 80
    targetPort: 80
