axion/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axion-ingress
spec:
  ingressClassName: ingress-appgateway

  rules:
  - host: axion-ui.phohajaleabi.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: axion
            port:
              number: 80
